css/custom.css
@CHARSET "US-ASCII";

@font-face {
	font-family: 'AmericanTypewriterLightA';
	src: url('/fonts/americantypewriter_lighta.eot');
	src: local('American Typewriter Light A'), local('Typewriter Light A'),
		url('/fonts/americantypewriter_lighta.ttf') format('truetype');
}

@font-face {
	font-family: 'AmericanTypewriterLight';
	src: url('/fonts/americantypewriter_light.eot');
	src: local('American Typewriter Light'), local('Typewriter Light'),
		url('/fonts/americantypewriter_light.ttf') format('truetype');
}

@font-face {
	font-family: 'AmericanTypewriter';
	src: url('/fonts/americantypewriter.eot');
	src: local('American Typewriter'), local('Typewriter'),
		url('/fonts/americantypewriter.ttf') format('truetype');
}

body,div,img {
	margin: 0px;
	padding: 0px;
}

.navbar-brand {
	font-family: 'AmericanTypewriterLightA', Arial, sans-serif;
	font-size: 36px;
	margin-top: 1.6em;
}

.navbar-nav {
	font-family: 'AmericanTypewriter', Arial, sans-serif;
	margin-top: 8.5em;
	margin-left: auto;
	margin-right: auto;
}

#line-menu {
	margin-top: 25px;
	width: 915px;
}

#menu {
	width: 905px;
	visibility: visible;
	position: relative;
}

#header,#image-container,#image,#menu {
	margin-left: auto;
	margin-right: auto;
	position: relative;
	width: 905px;
}

#image-container {
	margin-top: 35px;
}

[class^=favicon],[class*=fav],[class^=fav]:hover,[class*=fav]:hover {
	background-image: url("../img/favicons.gif");
	display: inline-block;
	width: 14px;
	height: 14px;
	margin-top: 1px;
	margin-right: 5px;
	line-height: 14px;
	vertical-align: text-top;
	background-position: 14px 14px;
	background-repeat: no-repeat;
	display: inline-block;
}

p.navbar-brand,
.navbar-default .navbar-brand,
.navbar-default .navbar-nav>li>a {
	color: black;
}

.navbar-default,
.navbar-brand {
	background-image: url('');
	box-shadow: none;
	-webkit-box-shadow: none;
	color: black;
	background-color: #ffffff;
	border: none;
}

.navbar-default .navbar-nav>.open>a,
.navbar-default .navbar-nav>.open>a:hover,
.navbar-default .navbar-nav>.open>a:focus
.navbar-default .navbar-brand,
.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus,
.navbar-default .navbar-nav>li,
.navbar-default .navbar-nav>li>a,
.navbar-default .navbar-nav>li>a:hover,
.navbar-default .navbar-nav>li>a:focus
	{
	background-color: #fff;
	color: #000;
}

ul.nav.navbar-nav li {
	height: 50px;
}

ul.nav.navbar-nav li li{
	height: initial;
}

ul.nav.navbar-nav ul{
	margin-left:14px;
}

ul.nav.navbar-nav li,.dropdown .open,.navbar-default .navbar-nav>.active>a,.navbar-default .navbar-nav>.active>a:hover,.navbar-default .navbar-nav>.active>a:focus
	{
	background-color: white;
	color: black;
}

#vertical-line {
	width: 4px;
	height: 135px;
	background-color: black;
	float: left;
	clear: none;
}

.navbar.navbar-default.navbar-fixed-top {
	width: 900px;
}

.hr-line {
	width: 121px;
	height: 1px;
	background-color: black;
}

a:hover>div.hr-line,.navbar-nav>.active>a>div.hr-line,li.dropdown.open {
	height: 3px;
}

a>div.hr-line>p {
	padding-left: -10px;
	padding-top: 10px;
}

a:hover.dropdown-toggle,
a:focus.dropdown-toggle{
	background-color: white;
}

